@@ -1,2 +1,3 @@
 --enable-native-access=ALL-UNNAMED
 -XX:+EnableDynamicAgentLoading
+--sun-misc-unsafe-memory-access=allow
